Modificacion inicio de la pag

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,25 @@
-.nava:hover{      
-    color: white !important;    
+:root {
+	--primary-100:#8B5FBF;
+    --primary-200:#61398F;
+    --primary-300:#FFFFFF;
+    --accent-100:#D6C6E1;
+    --accent-200:#9A73B5;
+    --text-100:#4A4A4A;
+    --text-200:#878787;
+    --bg-100:#F5F3F7;
+    --bg-200:#E9E4ED;
+    --bg-300:#FFFFFF;
+      
 }
-
 body {
-	background: #f2f2f2;
+	background: var(--bg-200);
 	font-family: 'Open Sans', sans-serif;
 }
 
 header .nav {
 	min-height: 80px;
 	overflow: hidden;
-	
+	background: var(--bg-300);
 }
 
 header .logo h2,
@@ -21,56 +30,40 @@ header .logo p {
 
 
 
-header .menu .c1 { background: #3da5e2; }
-header .menu .c2 { background: #005385; }
-header .menu .c3 { background: #003855; }
+header .menu .c1 { background:var(--accent-200); }
+header .menu .c2 { background:var(--accent-200); }
+header .menu .c3 { background:var(--accent-200); }
+header .menu .c4 { background:var(--accent-200); }
+header .menu .c5 { background:var(--accent-200); }
 
-header .menu .c1:hover { background: #1ba0ef; }
-header .menu .c2:hover { background: #00426a; }
-header .menu .c3:hover { background: #002d44; }
+header .menu .c1:hover { background: var(--primary-100); }
+header .menu .c2:hover { background: var(--primary-100); }
+header .menu .c3:hover { background: var(--primary-100); }
+header .menu .c4:hover { background: var(--primary-100); }
+header .menu .c5:hover { background: var(--primary-100); }
 
 /* MAIN */
 /* Portafolio */
 .portafolio {
-	border-top: 5px solid #3da5e2;
-	background: #fff;
+	border-bottom: 5px solid var(--accent-100);
+	background: var(--bg-200);
 }
 
-.portafolio .titulo {
-	color: #3da5e2;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
-}
-
-.portafolio .galeria .contenedor-imagen {
-	max-height: 180px;
-	overflow: hidden;
-}
-
-.portafolio .galeria .contenedor-imagen a {
-	background: #3da5e2;
-	display: inline-block;
-}
-
-.portafolio .galeria .contenedor-imagen:hover img {
-	opacity: .3;
-}
-
-/* Ventana Modal */
-.modal-dialog {
-	max-width: 1000px;
+.acerca-de {
+	border-bottom: 5px solid var(--accent-100);
+	background: var(--bg-200);
 }
 
 /* Acerca de */
 .acerca-de .foto .nombre {
-	color: #545454;
+	color:var(--primary-100);
 	font-weight: 300;
-	font-size: 18px;
+	font-size: 30px;
 	letter-spacing: 2px;
 }
 
 .acerca-de .info .titulo {
-	color: #005385;
+	color: var(--primary-200);
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 300;
 	font-size: 40px;
@@ -79,35 +72,37 @@ header .menu .c3:hover { background: #002d44; }
 
 .acerca-de .info .resumen {
 	letter-spacing: 1px;
+	font-size: 20px;
+	color:var(--text-100);
 }
 
 .acerca-de .info .label {
 	font-size: 18px;
 	font-weight: 600;
-	color: #005385;
+	color:var(--accent-100);
 	margin-bottom: 10px;
 }
 
 .acerca-de .info .progress {
-	background: #005385;
+	background: var(--accent-100);
 	border-radius: 0;
 	height: 25px;
 }
 
 .acerca-de .info .progress .progress-bar {
-	background: #3da5e2;
+	background: var(--bg-200);
 	line-height: 25px;
 	padding-left: 20px;
 }
 
 /* Contacto */
 .contacto {
-	border-top: 1px solid #cbcbcb;
-	border-bottom: 1px solid #cbcbcb;
+	border-top: 1px solid var(--accent-100);
+	border-bottom: 1px solid var(--accent-100);
 }
 
 .contacto .titulo {
-	color: #003855;
+	color:var(--bg-200);
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 300;
 	font-size: 40px;
