--- a/css/main.css
+++ b/css/main.css
@@ -68,10 +68,11 @@ header .menu .c5:hover { background: var(--primary-100); }
 	font-weight: 300;
 	font-size: 40px;
 	margin-bottom: 30px;
+	gap: 2;
 }
 
 .acerca-de .info .resumen {
-	letter-spacing: 1px;
+	letter-spacing: 2px;
 	font-size: 20px;
 	color:var(--text-100);
 }
