Se agrega mas nuestros

--- a/css/main.css
+++ b/css/main.css
@@ -45,12 +45,12 @@ header .menu .c5:hover { background: var(--primary-100); }
 /* MAIN */
 /* Portafolio */
 .portafolio {
-	border-bottom: 5px solid var(--accent-100);
+	border-bottom: 3px solid var(--accent-100);
 	background: var(--bg-200);
 }
 
 .acerca-de {
-	border-bottom: 5px solid var(--accent-100);
+	border-bottom: 3px solid var(--accent-100);
 	background: var(--bg-200);
 }
 
@@ -95,6 +95,55 @@ header .menu .c5:hover { background: var(--primary-100); }
 	line-height: 25px;
 	padding-left: 20px;
 }
+
+/*   MARCA  */
+
+.marca {	
+	border-bottom: 3px solid var(--accent-100);
+}
+.marca h1{	
+	color:var(--primary-200);
+}
+
+.marca h2{	
+	color:var(--primary-100);
+}
+
+.marca li{	
+	letter-spacing: 2px;
+	font-size: 16px;
+	color:var(--text-100);	
+}
+.card{
+	background: var(--bg-1000);
+}
+
+.servicio{
+	border-bottom: 3px solid var(--accent-100);
+	margin-bottom: 5rem;
+}
+.servicio h1{	
+	color:var(--primary-200);
+}
+
+
+.accordion-button{	
+	color : var(--primary-100);	   
+    font-weight: bold;
+	background-color: var(--accent-100);
+}
+.accordion-button:not(.collapsed){	
+	color :  var(--primary-100);	    
+    font-weight: bold;
+	background-color: var(--accent-100);
+}
+
+.accordion-body{
+	letter-spacing: 2px;
+	font-size: 16px;
+	color:var(--text-100);
+}
+
 
 /* Contacto */
 .contacto {
@@ -184,10 +233,12 @@ header .menu .c5:hover { background: var(--primary-100); }
 }
 
 /* Dispositivo md */
-@media screen and (max-width: 768px){}
+@media screen and (max-width: 768px){
 
-/* Dispositivo lg */
-@media screen and (max-width: 992px){
+}
+
+/* Dispositivo lg  992px*/
+@media screen and (max-width: 1200px){
 	.logo {
 		height: 76px;
 	}
@@ -200,13 +251,7 @@ header .menu .c5:hover { background: var(--primary-100); }
 		width: 100%;
 	}
 
-	.portafolio .galeria .contenedor-imagen:nth-child(1) {order: 1;}
-	.portafolio .galeria .contenedor-imagen:nth-child(2) {order: 3;}
-	.portafolio .galeria .contenedor-imagen:nth-child(3) {order: 6;}
-	.portafolio .galeria .contenedor-imagen:nth-child(4) {order: 2;}
-	.portafolio .galeria .contenedor-imagen:nth-child(5) {order: 5;}
-	.portafolio .galeria .contenedor-imagen:nth-child(6) {order: 4;}
-	.portafolio .galeria .contenedor-imagen:nth-child(7) {order: 7;}
+
 }
 
 /* Dispositivo xl */
