--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,22 @@ header .menu .c5:hover { background: var(--primary-100); }
 	background: var(--bg-200);
 }
 
+.nosotras .resumen{
+	color: var(--primary-200);
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+	font-size: 26px;
+	margin-bottom: 30px;
+	gap: 2;
+}
+.nosotras .resumen_mayor{
+	color: var(--primary-200);
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+	font-size: 30px;
+	margin-bottom: 30px;
+	gap: 2;
+}
 /* Acerca de */
 .acerca-de .foto .nombre {
 	color:var(--primary-100);
@@ -216,7 +232,9 @@ header .menu .c5:hover { background: var(--primary-100); }
 .accordion-body{
 	letter-spacing: 2px;
 	font-size: 16px;
-	color:var(--text-100);
+	/*color:var(--text-100);*/
+	color:var(--primary-200);
+	background-color: var(--bg-200);
 }
 
 
